# pre-commit-msg

./: .pre-commit-config.yaml  .pre-commit-hooks.yaml  CITATION.cff  Makefile  README.md  pyproject.toml  setup.cfg  tox.ini
.github/workflows/: codeql-analysis.yml  continous-integration.yml  pre-commit-update.yml
pre_commit_msg/: __init__.py  format_message.py  prepare_message.py  suggest_message.py
tests/: conftest.py  format_message_test.py  prepare_message_test.py  suggest_message_test.py
