[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "pre_commit_msg"
description = "Some commit message hooks for pre-commit."
authors = [
  { name="Raphael Boidol", email="boidolr@users.noreply.github.com" },
]
urls = {"Respository" = "https://github.com/boidolr/pre-commit-msg"}
license = {file = "LICENSE"}
readme = "README.md"
dynamic = ["version"]
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: Implementation :: CPython",
]

requires-python = ">=3.8"

[project.optional-dependencies]
dev = [
    "black",
    "flake8",
    "pre-commit",
    "tox",
    "tox-pyenv",
]
tests = [
    "pytest",
    "pytest-clarity",
    "pytest-mypy",
]

[project.scripts]
format-message = "pre_commit_msg.format_message:main"
prepare-message = "pre_commit_msg.prepare_message:main"

[tool.setuptools.dynamic]
version = {attr = "pre_commit_msg.VERSION"}

[tool.setuptools]
packages = ["pre_commit_msg"]

[tool.black]
target-version = ["py38"]
line-length = 120

[tool.mypy]
check_untyped_defs = true
disallow_any_generics = true
disallow_incomplete_defs = true
disallow_untyped_defs = true
no_implicit_optional = true
ignore_missing_imports = true

[tool.pytest.ini_options]
addopts = "--mypy"
filterwarnings = [
    "error",
    "ignore:path is deprecated:DeprecationWarning",
]

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false
