[metadata]
name = pre_commit_msg
version = attr: pre_commit_msg.VERSION
description = Some commit message hooks for pre-commit.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/boidolr/pre-commit-msg
author = Raphael Boidol
author_email = boidolr@users.noreply.github.com
license = MIT
license_file = LICENSE
classifiers =
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: Implementation :: CPython

[options]
packages = find:
python_requires = >=3.7

[options.packages.find]
exclude =
    build*
    test*

[options.entry_points]
console_scripts =
    format-message = pre_commit_msg.format_message:main
    prepare-message = pre_commit_msg.prepare_message:main

[options.extras_require]
tests =
    black
    pre-commit
    pytest
    pytest-clarity
    pytest-flake8
    pytest-mypy

[aliases]
test = pytest

[tool:pytest]
addopts =
    --flake8
    --mypy
filterwarnings =
    error
    ignore:SelectableGroups dict interface is deprecated::flake8

[flake8]
max-line-length = 120
extend-ignore = E203

[mypy]
check_untyped_defs = True
disallow_any_generics = True
disallow_incomplete_defs = True
disallow_untyped_defs = True
no_implicit_optional = True
ignore_missing_imports = True

[mypy-tests.*]
disallow_untyped_defs = False
